--- a/PersonalDIary/res/layout/story_details_layout.xml
+++ b/PersonalDIary/res/layout/story_details_layout.xml
@@ -27,12 +27,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp" 
        >
+
        <ImageView
            android:id="@+id/storyImageView"
            android:layout_width="fill_parent"
-           android:layout_height="fill_parent"
-           android:contentDescription="@string/storyImageText"
-           >
+           android:layout_height="230dp"
+            >
            
        </ImageView>
     </FrameLayout>
