--- a/PersonalDIary/res/layout/list_view_layout.xml
+++ b/PersonalDIary/res/layout/list_view_layout.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" 
     style="@style/storyListBGColor">
+    
+    
 
     <TextView
         android:id="@+id/storyIDTextView"
@@ -36,5 +38,21 @@
         android:textSize="20sp"
         android:textColor="#000000"
         android:text="TextView" />
+
+   <FrameLayout
+       android:id="@+id/imageFrame"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignTop="@+id/dot"
+       android:layout_marginLeft="29dp"
+       android:layout_toRightOf="@+id/storyTitleTextView"
+       >
+       <ImageView 
+           android:id="@+id/imageViewTransition"
+           android:layout_width="fill_parent"
+           android:layout_height="fill_parent"
+           android:src="@drawable/trash_icon"
+           />
+   </FrameLayout>
 
 </RelativeLayout>
