Enchanced the application to show image in the story details layout below the video view. The image is shown in ImageView. Earlier this was not working since I was trying to load a large image . I reduced the image size in the camera and then when I load the image it works fine.

--- a/PersonalDIary/res/layout/story_details_layout.xml
+++ b/PersonalDIary/res/layout/story_details_layout.xml
@@ -61,11 +61,12 @@
             android:text="@string/imageLabel" />
 
      <ImageView
-           android:id="@+id/storyImageView"
-           android:layout_width="200dp"
-           android:layout_height="170dp"
-           android:layout_alignParentBottom="true"
-           android:layout_alignParentRight="true" />
+         android:id="@+id/storyImageView"
+         android:layout_width="fill_parent"
+         android:layout_height="170dp"
+         android:layout_alignParentBottom="true"
+         android:layout_alignParentRight="true" 
+        />
 
      <TextView
          android:id="@+id/titlePlaceHolder"
